--- a/styles/quiz-maker.css
+++ b/styles/quiz-maker.css
@@ -12,6 +12,8 @@
     margin-left: 2rem;
 }
 
+
+
 @media only screen and (max-width: 600px) {
     .input-grid {
         grid-template-columns: 1fr;
@@ -22,7 +24,7 @@
         margin-left: 0.6rem;
     }
     .mobile-seperator {
-        width: 100%;
+        width: 90%;
         height: 0px;
         margin: 1rem;
         margin-top: 2rem;
@@ -30,6 +32,10 @@
         border-style: solid;
         border-color: #d3d3d3;
         border-radius: 1rem;
+        margin-right: 1rem;
     }
 
+    #previous-button, #next-button {
+        display: none !important;
+    }
 }
